# SCOPE_REACH_optimized_inference

./: .gitignore  README.md  pyproject.toml  run_scope_reach_timed.py
benchmarks/: bench_baseline.py  bench_comparison.py  bench_interleave.py  bench_io_roundtrip.py  bench_time_horizon.py  bench_truncation.py  common.py  resampling.py  run_benchmarks.py
cocoa_inference_testing/: pipeline_config.yaml  run_inference.sh  run_timelines.py
cocoa_inference_testing/scope_reach_output/: patient_index.parquet  pipeline_config.yaml  run_summary.json  scores.npz
cocoa_inference_testing/scope_reach_output/trajectories/: config.json  trajectories.npz
mc_timeline/: __init__.py  diagnostics.py  engines.py  generation.py  io.py  scheduler.py  scoring.py  structures.py  types.py
mc_timeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quick_sco_re/: __init__.py  diagnostics.py  generation.py  io.py  scheduler.py  structures.py
scripts/: run_pipeline.py
slurm/: run_all_tests.sh
tests/: conftest.py  test_generation.py  test_inline_scope_reach.py  test_io.py  test_scheduler.py  test_scoring.py  test_structures.py  test_time_truncation.py
